# flowcat

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  FEATURES.md  NOTICE  PROCESSOR-DESIGN.md  PROVIDERS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SIP-DESIGN.md  SPINOUT.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docs.yml
bench/: Dockerfile  Dockerfile.dockerignore  README.md  RESULTS.md  compose.yml  pipecat_profile.py  pipecat_sut.py  run-sweep.sh
bench-rs/: Cargo.toml
bench-rs/src/: main.rs
docs/: context-relay-evaluation.md  context-relay-launch-post.md
examples/: README.md
examples/python-mcp-tools/: README.md  mcp_server.py
examples/python-remote-brain/: README.md  brain_server.py
flowcat-cli/: Cargo.toml
flowcat-cli/src/: main.rs  pipeline_demo.rs  ws_echo.rs
flowcat-core/: Cargo.toml
flowcat-core/src/: brain.rs  codec.rs  error.rs  lib.rs  session.rs  transcript.rs  types.rs
flowcat-core/src/agent/: fcall_filter.rs  ivr.rs  mod.rs  text_filter.rs  voicemail.rs  wakeword.rs
flowcat-core/src/audio/: filter.rs  mixer.rs  mod.rs  strategy.rs  turn.rs  vad.rs
flowcat-core/src/observer/: mod.rs  rtvi.rs
flowcat-core/src/pipeline/: cascaded.rs  context_relay.rs  mod.rs  parallel.rs  runner.rs  s2s.rs  s2s_test_mocks.rs  source_pump.rs  task.rs
flowcat-core/src/processor/: frame.rs  metrics.rs  mod.rs  runtime.rs
flowcat-core/src/realtime/: gemini_live.rs  mod.rs  service_adapter.rs
flowcat-core/src/serializer/: mod.rs  plivo.rs
flowcat-core/src/service/: adapters.rs  mod.rs
flowcat-core/src/sip/: agent.rs  mod.rs  rtp.rs  sdp.rs  transport.rs
flowcat-core/src/transport/: carrier.rs  media.rs  mod.rs  socket.rs  ws_media.rs
flowcat-server/: Cargo.toml
flowcat-server/src/: main.rs  run.rs  server.rs  sip.rs  webrtc.rs
flowcat-services/: Cargo.toml
flowcat-services/src/: factory.rs  lib.rs  mcp.rs
flowcat-services/src/brain/: mod.rs  remote.rs
flowcat-services/src/llm/: anthropic.rs  aws_bedrock.rs  azure.rs  cerebras.rs  deepseek.rs  fireworks.rs  google.rs  google_vertex.rs  grok.rs  groq.rs  minimax.rs  mistral.rs  mod.rs  nebius.rs  novita.rs  nvidia_nim.rs  ollama.rs  openai.rs  openai_responses.rs  openrouter.rs  perplexity.rs  qwen.rs  sambanova.rs  sarvam.rs  speaches.rs  together.rs
flowcat-services/src/observability/: langfuse.rs  mod.rs  otel.rs  sentry.rs
flowcat-services/src/realtime/: azure.rs  grok.rs  inworld.rs  mod.rs  nova_sonic.rs  openai.rs  ultravox.rs
flowcat-services/src/stt/: assemblyai.rs  aws_transcribe.rs  azure.rs  cartesia.rs  deepgram.rs  elevenlabs.rs  fal.rs  gladia.rs  google.rs  gradium.rs  groq.rs  mistral.rs  mod.rs  nvidia.rs  openai.rs  rest_stt_common.rs  sarvam.rs  soniox.rs  speaches.rs  speechmatics.rs  whisper_local.rs  ws_stt_common.rs  xai.rs
flowcat-services/src/tts/: asyncai.rs  aws_polly.rs  azure.rs  camb.rs  cartesia.rs  deepgram.rs  elevenlabs.rs  fish.rs  google.rs  gradium.rs  groq.rs  http_tts_common.rs  hume.rs  inworld.rs  kokoro.rs  lmnt.rs  minimax.rs  mistral.rs  mod.rs  neuphonic.rs  nvidia.rs  openai.rs  piper.rs  resemble.rs  rime.rs  sarvam.rs  smallest.rs  soniox.rs  speaches.rs  speechmatics.rs  tail_tts_common.rs  ws_tts_common.rs  xai.rs  xtts.rs
flowcat-services/tests/: live_cascaded_turn.rs
flowcat-telephony/: Cargo.toml
flowcat-telephony/src/: asterisk.rs  cloudonix.rs  exotel.rs  genesys.rs  lib.rs  plivo.rs  telnyx.rs  twilio.rs  vobiz.rs  vonage.rs
flowcat-telephony/src/dtmf/: goertzel.rs  mod.rs  rfc2833.rs
flowcat-transports/: Cargo.toml
flowcat-transports/src/: daily.rs  lib.rs  livekit.rs  local.rs  ws.rs
flowcat-transports/src/avatar/: mod.rs
flowcat-transports/src/webrtc/: mod.rs  opus.rs  signaling.rs
website/: README.md  book.toml
website/src/: SUMMARY.md  api-reference.md  configuration.md  deployment.md  design.md  embedder.md  features.md  introduction.md  processor-design.md  providers.md  quickstart.md  sip-design.md
