[package]
name = "flowcat-cli"
description = "Flowcat developer CLI — local-mic / WebSocket demo harness."
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "flowcat"
path = "src/main.rs"

[dependencies]
flowcat-core = { path = "../flowcat-core" }
# The generic WebSocket media transport (`WsTransport`) used by the `ws-echo` demo.
flowcat-transports = { path = "../flowcat-transports", features = ["ws"] }
# `#[async_trait]` for the demo `FrameProcessor`/`FrameObserver` impls (same
# version flowcat-core/-transports use).
async-trait = "0.1"
# Subcommand parsing for the two demos.
clap = { version = "4", features = ["derive"] }
# Async runtime: the pipeline + WS transports are tokio-native.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
# Stream/Sink combinators for driving the loopback WS client/server sockets.
futures = "0.3"
# WS server side for the self-contained loopback (mirror flowcat-transports' deps).
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
