[package]
name = "flowcat-core"
description = "Self-hosted native-Rust real-time voice-agent runtime — one binary, no Python or softswitch: transports, serializers, codec, and a speech-to-speech (Gemini Live) pipeline."
version.workspace = true
edition.workspace = true
license.workspace = true

# Feature matrix. `sip`/`recorder` are additive
# no-op flags made explicit (the SIP UA + recorder are always compiled today;
# gating their *bodies* is a later cleanup — for now the flags just document
# intent and are on by default). The ONLY new optional dep is `ort` (ONNX
# Runtime) behind `vad-ort`, so flowcat-core stays dependency-light by default;
# `reqwest`/`tonic`/`str0m`/`whisper-rs` live in the sibling crates.
[features]
default = ["sip", "recorder"]
sip = []              # native SIP UA — already implicit; made explicit
recorder = []         # call recorder-as-processor
vad-ort = ["dep:ort", "dep:ndarray"] # Silero VAD + Smart-Turn ONNX impls (heavy → opt-in)
# Noise suppression via a pure-Rust RNNoise port (`nnnoiseless`, no C/system
# dep). Opt-in so the default core build stays light; the IdentityFilter
# pass-through is always available.
filter-rnnoise = ["dep:nnnoiseless"]

# Every dependency Flowcat needs is declared here up front, with versions
# verified to exist on crates.io and to resolve together
# (see DESIGN.md "Audio path" / "Gemini Live protocol").
[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
base64 = "0.22"
# WS client for the Gemini Live socket. `rustls-tls-webpki-roots` is a
# self-contained TLS backend (bundled webpki roots, no system OpenSSL) that
# resolves cleanly for wss:// — verified to compile.
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
# Sample-rate conversion (8k<->16k carrier<->Gemini-in, 24k->8k Gemini-out).
rubato = "3"
# Buffer views for rubato 3.x's `process_into_buffer` (audioadapter), same 3.x
# line rubato pulls. Mono PCM wraps as a 1-channel `InterleavedSlice`.
audioadapter-buffers = "3"
# G.711 mu-law / A-law encode+decode (encode_ulaw / decode_ulaw).
audio-codec-algorithms = "0.8"
# WAV writing for the call recorder.
hound = "3"
bytes = "1"
# Native SIP user-agent stack (signaling only: REGISTER w/ digest auth,
# INVITE/ACK/BYE transactions + dialogs). RTP + SDP are hand-rolled in
# `src/sip/{rtp,sdp}.rs` (deterministic, no extra dep). rsipstack re-exports
# the `rsip` message/header types as `rsipstack::sip` (see SIP-DESIGN.md §2).
# Default features (rustls + websocket + srv_lookup) are kept on: rsipstack's
# `transport::{websocket,tls}` modules are NOT cfg-gated, so disabling those
# features leaves their tungstenite/rustls-typed bodies uncompilable. We only
# *use* the UDP transport; the others are dead code that still must build.
rsipstack = "0.5"
# rsipstack manages its own subtasks via a shared CancellationToken; we hold
# one per SipAgent to drive the listener/registration loop and tear it down.
tokio-util = { version = "0.7", features = ["rt"] }
# SSRC + RTP seq/ts seeds.
rand = "0.10"
# ONNX Runtime for the Silero VAD + Smart-Turn impls. Optional + gated behind
# `vad-ort` so the default core build pulls no ONNX runtime (the ONLY new core
# dep). `ndarray` for tensor IO; no system OpenSSL pulled (ort downloads/links
# the ORT binary itself).
# NOTE (version pins):
#   1. ort 2.x ships only as pre-releases (no stable `2` on crates.io yet) → pin
#      the latest rc explicitly (`version = "2"` does not resolve).
#   2. keep ort's default features ON: with `default-features = false` the gated
#      `ndarray` feature pulls a no_std `ndarray` whose `NdFloat` is absent and
#      ort fails to compile. Defaults give a working `std` ndarray + the ORT
#      download/link strategy. Still fully optional → no impact on the default
#      core build.
ort = { version = "2.0.0-rc.12", optional = true, features = ["ndarray"] }
# Tensor IO for the ONNX VAD/turn impls. `ort` does not publicly re-export
# `ndarray`, so depend on it directly (same 0.17 line ort pins) — gated on
# `vad-ort` so the default core build pulls neither ort nor ndarray.
ndarray = { version = "0.17", optional = true }
# Pure-Rust RNNoise port for the noise-suppression filter (behind
# `filter-rnnoise`). `default-features = false` drops its `bin`/`clap`/`anyhow`
# extras so it links as a lean library (pulls only `rustfft`/`realfft`). Optional
# → no impact on the default core build.
nnnoiseless = { version = "0.5", optional = true, default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
