[package]
name = "flowcat-telephony"
description = "Flowcat carrier WebSocket FrameSerializers (Twilio/Telnyx/Plivo/Exotel/Vonage/Genesys/Asterisk/Cloudonix/Vobiz) + DTMF (RFC2833 + in-band Goertzel)."
version.workspace = true
edition.workspace = true
license.workspace = true

# Each carrier serializer is behind its
# own feature (no extra dep — they only need base64+serde_json, already on). The
# `FrameSerializer`/`MediaSerializer` trait stays frozen in flowcat-core; each
# serializer here impls it. Each serializer flips a feature on, never adds a dep
# line. `default = ["plivo"]` mirrors the live carrier today.
[features]
default = ["plivo"]
twilio = []
telnyx = []
plivo  = []
exotel = []
vonage = []
genesys = []
asterisk = []
cloudonix = []
vobiz = []
dtmf-inband = []   # in-band Goertzel DTMF detection (RFC2833 is always available)

[dependencies]
flowcat-core = { path = "../flowcat-core" }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
